--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ hs_err_pid*
 
 # Ignore Gradle build output directory
 build
+
+#Exlips
+.classpath
+.project
+.settings/org.eclipse.buildship.core.prefs
+.settings/org.eclipse.jdt.core.prefs
+
+bin
